--- a/HH1.html
+++ b/HH1.html
@@ -69,7 +69,7 @@
                 <a href="https://docs.google.com/document/d/17t4W3gtyoUiO44yjgvP8M17WAAlvhG3YKq1gMYbDYcs/edit"><img src="descarga.png"></a>
                 <div class="card-body">
                   <p class="card-title h2">DEEB WEB ETA TOR</p>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text">Deeb Web-ari buruzko hainbat galderari erantzuna</p>
                   <div class="d-flex justify-content-between align-items-center">
                   </div>
                 </div>
