--- a/HH1.html
+++ b/HH1.html
@@ -23,6 +23,9 @@
           margin-top: 100px;
           padding: 20px;
       }
+      #text1{
+        text-align: center;
+      }
       
     </style>
   </head>
@@ -54,7 +57,7 @@
     <main role="main">
 
       <section class="jumbotron text-center bg-light">
-        <div class="container">
+        <div class="container text-center">
           <h1>1. Hiruhilabetea</h1>
           <p class="lead text-muted">Lehenengo hiruhilabete honetan, segurtasunaren inguruan arituko gara. Deep Web-a zer den ikasiko dugu eta orri horietara sartzeko ahalegin guztiak ere egingo ditugu.</p>
         </div>
@@ -69,7 +72,7 @@
                 <a href="https://docs.google.com/document/d/17t4W3gtyoUiO44yjgvP8M17WAAlvhG3YKq1gMYbDYcs/edit"><img src="descarga.png"></a>
                 <div class="card-body">
                   <p class="card-title h2">DEEB WEB ETA TOR</p>
-                  <p class="card-text">Deeb Web-ari buruzko hainbat galderari erantzuna</p>
+                  <p class="card-text" id="text1">Deeb Web-ari buruzko hainbat galderari erantzuna</p>
                   <div class="d-flex justify-content-between align-items-center">
                   </div>
                 </div>
