--- a/HH1.html
+++ b/HH1.html
@@ -72,7 +72,10 @@
                 <a href="https://docs.google.com/document/d/17t4W3gtyoUiO44yjgvP8M17WAAlvhG3YKq1gMYbDYcs/edit"><img src="descarga.png"></a>
                 <div class="card-body">
                   <p class="card-title h2">DEEB WEB ETA TOR</p>
-                  <p class="card-text" id="text1">Deeb Web-ari buruzko hainbat galderari erantzuna</p>
+                  <div class="card-text" id="text1">
+                    <p>Deeb Web-ari buruzko hainbat galderari erantzuna</p>
+                    <p><a href="https://www.youtube.com/watch?v=zQ470q7z91k">Gaiari buruzko bideo interesgarria - Chema Alonso</a></p>
+                  </div>
                   <div class="d-flex justify-content-between align-items-center">
                   </div>
                 </div>
