--- a/HH1.html
+++ b/HH1.html
@@ -56,14 +56,14 @@
 
     <main role="main">
 
-      <section class="jumbotron text-center bg-light">
+      <section class="jumbotron text-center">
         <div class="container text-center">
           <h1>1. Hiruhilabetea</h1>
           <p class="lead text-muted">Lehenengo hiruhilabete honetan, segurtasunaren inguruan arituko gara. Deep Web-a zer den ikasiko dugu eta orri horietara sartzeko ahalegin guztiak ere egingo ditugu.</p>
         </div>
       </section>
     
-      <div class="album py-5 bg-light">
+      <div class="album py-5">
         <div class="container">
     
           <div class="row">
@@ -90,23 +90,18 @@
                     <p>Taldeka egin genuen lanaren infografia</p>
                     <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSeNhnZ_39OHI1iQP2PhyMaHnDK3OfuHqhyD-HH11-6mOJ197A/viewform" target="_blank">Gaiari buruzko egin genuen galdetegia</a></p>
                   </div>
-                  <div class="d-flex justify-content-between align-items-center">
-                  </div>
+                  <div class="d-flex justify-content-between align-items-center"></div>
                 </div>
               </div>
             </div>
             <div class="col-md-4">
               <div class="card mb-4 shadow-sm">
-                <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+                <a href="https://drive.google.com/file/d/1xYeIWnKNRkjiQDKJK1HMu-nWfhcFW7Ws/view?usp=sharing" target="-blank"><img width="100%" height="225" src="placabase.jpg"></a>
                 <div class="card-body">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                    </div>
-                    <small class="text-muted">9 mins</small>
-                  </div>
+                  <p class="card-title h2">ORDENAGAILUA DESMONTATZEN</p>
+                  <p class="card-text" id="text1">Taldeka DELL markako ordenagailua desmontatzen.</p>
+                  <p></p>
+                  <div class="d-flex justify-content-between align-items-center"></div>
                 </div>
               </div>
             </div>
