--- a/HH1.html
+++ b/HH1.html
@@ -71,9 +71,9 @@
               <div class="card mb-4 shadow-sm">
                 <a href="https://docs.google.com/document/d/17t4W3gtyoUiO44yjgvP8M17WAAlvhG3YKq1gMYbDYcs/edit" target="-blank"><img src="descarga.png"></a>
                 <div class="card-body">
-                  <p class="card-title h2">DEEB WEB ETA TOR</p>
+                  <p class="card-title h2">INFORMATIKA HASIERA ETA DEEB WEB</p>
                   <div class="card-text" id="text1">
-                    <p>Deeb Web-ari buruzko hainbat galderari erantzuna</p>
+                    <p>Informazio pertsonalaren segurtasuna eta Deeb Web-ari buruzko hainbat galderari erantzuna</p>
                     <p><a href="https://www.youtube.com/watch?v=zQ470q7z91k" target="_blank">Gaiari buruzko bideo interesgarria - Chema Alonso</a></p>
                   </div>
                   <div class="d-flex justify-content-between align-items-center">
