--- a/HH1.html
+++ b/HH1.html
@@ -105,6 +105,17 @@
                 </div>
               </div>
             </div>
+            <div class="col-md-4">
+              <div class="card mb-4 shadow-sm">
+                <a href="https://docs.google.com/presentation/d/1qBspQw4pMrNc0Zq6nbJEzOn__kbvhHgfhVIqjyPpUw0/edit?usp=sharing" target="-blank"><img width="100%" height="225" src="saresozialak.jpg"></a>
+                <div class="card-body">
+                  <p class="card-title h2">SARE SOZIALAK</p>
+                  <p class="card-text" id="text1">Dokumentala ikusi ondoren egin dudan hausnarketa</p>
+                  <p><a href="https://www.google.com/search?gs_ssp=eJzj4tVP1zc0zDJPt0hKskwxYPRSTMlPLs1NzStJzFHISy1Jy8msUChKTUktVijOT85MzEktBgCcIhFo&q=documental+netflix+redes+sociales&rlz=1C1CHBF_esES881ES881&oq=documental+netflix+&aqs=chrome.1.69i57j46j0l2j46l2j0.3967j0j7&sourceid=chrome&ie=UTF-8" target="_blank">Ikusi genuen dokumentala</a></p>
+                  <div class="d-flex justify-content-between align-items-center"></div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
