--- a/HH1.html
+++ b/HH1.html
@@ -26,6 +26,10 @@
       #text1{
         text-align: center;
       }
+      body {
+       background-image: url(informatica1.jpg);
+       background-size: cover;
+      }
       
     </style>
   </head>
