--- a/HH2.html
+++ b/HH2.html
@@ -23,6 +23,10 @@
           margin-top: 100px;
           padding: 20px;
       }
+      body {
+       background-image: url(informatica1.jpg);
+       background-size: cover;
+      }
     </style>
   </head>
   <body>
