--- a/HH3.html
+++ b/HH3.html
@@ -70,11 +70,25 @@
           <div class="row">
             <div class="col-md-4">
               <div class="card mb-4 shadow-sm">
-                <a href="https://docs.google.com/document/d/1c3Kru0kOEVr6j0F2vdZQTf_mdr5j1lhpJS0nQ5RQfsM/edit?usp=sharing" target="-blank"><img class="card-img-top" src="BlackMirror_EP3_t-t.png" alt="Card image cap"></a>
+                <a href="https://docs.google.com/document/d/1c3Kru0kOEVr6j0F2vdZQTf_mdr5j1lhpJS0nQ5RQfsM/edit?usp=sharing" target="-blank"><img class="card-img-top" src="black-mirror-1559987780.png" alt="Card image cap"></a>
                 <div class="card-body">
                   <p class="card-title h2">BlackMirror gidoia</p>
                   <div class="card-text" id="text1">
                     <p>BlackMirror serieko kapitulo bateko bideko gidoia</p>
+                    <p><a href="https://drive.google.com/file/d/1KGbN14pdeNFXyM1r2kDkE5woU4hfxxfF/view?ts=60780403" target="_blank">"Caída en picado" episodioa</a></p>
+                  </div>
+                  <div class="d-flex justify-content-between align-items-center">
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="card mb-4 shadow-sm">
+                <a href="https://drive.google.com/file/d/1YJm2bzaSrwyF6bvGx_EyL_zCHhruwsp4/view?usp=sharing" target="-blank"><img class="card-img-top" src="blackmirror.jpg" alt="Card image cap"></a>
+                <div class="card-body">
+                  <p class="card-title h2">BlackMirror bideoa</p>
+                  <div class="card-text" id="text1">
+                    <p>BlackMirror serieko kapitulo bateri buruzko bideoa</p>
                     <p><a href="https://drive.google.com/file/d/1KGbN14pdeNFXyM1r2kDkE5woU4hfxxfF/view?ts=60780403" target="_blank">"Caída en picado" episodioa</a></p>
                   </div>
                   <div class="d-flex justify-content-between align-items-center">
